--- a/package.json
+++ b/package.json
@@ -1,24 +1,23 @@
 {
-  "name": "vue-vs-react",
-  "description": "",
-  "keywords": [],
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ouduidui/vue-vs-react.git"
-  },
-  "author": "Dewey Ou",
+  "private": true,
   "scripts": {
-    "dev": "live-server --open='./src' --port=3333 --watch='./src'",
-    "lint": "eslint --ext .js,.html"
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview"
   },
-  "bugs": {
-    "url": "https://github.com/ouduidui/vue-vs-react/issues"
+  "dependencies": {
+    "pinia": "^2.0.13"
   },
-  "homepage": "https://github.com/ouduidui/vue-vs-react#readme",
   "devDependencies": {
-    "@ouduidui/eslint-config-basic": "^0.1.1",
-    "eslint": "^8.14.0",
-    "live-server": "^1.2.2"
+    "@iconify-json/carbon": "^1.1.3",
+    "@ouduidui/eslint-config-vue": "^0.1.1",
+    "@pinia/nuxt": "^0.1.8",
+    "@unocss/nuxt": "^0.31.8",
+    "@unocss/reset": "^0.31.12",
+    "@vueuse/nuxt": "^8.3.0",
+    "eslint": "^8.13.0",
+    "nuxt": "3.0.0-rc.1",
+    "typescript": "^4.6.3"
   }
 }
