--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Vue To React",
+  "name": "vue-to-react",
   "description": "when a Vuer is transforming into a Reacter.",
   "license": "MIT",
   "repository": {
